--- a/res/layout/activity_addorder.xml
+++ b/res/layout/activity_addorder.xml
@@ -175,6 +175,7 @@
 	         android:paddingTop="6dp"
 	         android:paddingLeft="20dp"
 	         android:paddingRight="20dp"
+	         android:id="@+id/relative_TransportName"
 	        android:paddingBottom="6dp">	    
 	        <TextView android:layout_width="wrap_content"
 		        android:layout_height="match_parent"
@@ -204,6 +205,7 @@
 	         android:paddingTop="6dp"
 	         android:paddingLeft="20dp"
 	         android:paddingRight="20dp"
+	          android:id="@+id/relative_SettleName"
 	        android:paddingBottom="6dp">	    
 	        <TextView android:layout_width="wrap_content"
 		        android:layout_height="match_parent"
