--- a/res/layout/activity_addorder.xml
+++ b/res/layout/activity_addorder.xml
@@ -28,6 +28,7 @@
 	        android:orientation="horizontal"
 	         android:paddingTop="6dp"
 	         android:paddingLeft="20dp"
+	         android:id="@+id/relative_CustName"
 	         android:paddingRight="20dp"
 	        android:paddingBottom="6dp">	    
 	        <TextView android:layout_width="wrap_content"
@@ -354,6 +355,7 @@
 	        android:orientation="horizontal"
 	         android:paddingTop="6dp"
 	         android:paddingLeft="20dp"
+	          android:id="@+id/relative_SellerName"
 	         android:paddingRight="20dp"
 	        android:paddingBottom="6dp">	    
 	        <TextView android:layout_width="wrap_content"
