--- a/res/layout/activity_addorder.xml
+++ b/res/layout/activity_addorder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
+        android:id="@+id/activity_addorder_head"
         android:background="@drawable/bottom_border"
         android:gravity="center">
         <TextView android:layout_width="match_parent"
@@ -18,10 +19,12 @@
     </LinearLayout>
 	<ScrollView
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content" 
-	    android:layout_below="@+id/activityorderdeatal_head">
+	    android:layout_height="match_parent"   
+	    android:layout_below="@+id/activity_addorder_head"
+	 	>
 	 <LinearLayout android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="match_parent"
+	    android:id="@+id/addorder_scroll_child_linear"
 	    android:orientation="vertical">
 	     <RelativeLayout android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -45,7 +48,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_CustName"/> 
 		</RelativeLayout>
 	    <View android:layout_height="1dp"
@@ -73,7 +76,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_DeliveryDate"/> 
 		</RelativeLayout>
 	    <View android:layout_height="1dp"
@@ -102,7 +105,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_SignDate"/> 
 		</RelativeLayout>
 	    
@@ -132,7 +135,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_DeptName"/> 
 		</RelativeLayout>
 		 
@@ -162,7 +165,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_DeliveryAddr"/> 
 		</RelativeLayout>
 	    
@@ -192,7 +195,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_TransportName"/> 
 		</RelativeLayout>
 	    
@@ -222,7 +225,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_SettleName"/> 
 		</RelativeLayout>
 		
@@ -252,7 +255,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_Freight"/> 
 		</RelativeLayout>
 	    
@@ -282,7 +285,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_SignAddr"/> 
 		</RelativeLayout>
 		
@@ -312,7 +315,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_ContractCode"/> 
 		</RelativeLayout>
 		
@@ -342,7 +345,7 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_ReceDays"/> 
 		</RelativeLayout>
 		
@@ -372,10 +375,43 @@
 		        android:layout_alignParentRight="true"
 		        android:layout_gravity="right"
 		        android:gravity="right"
-		        android:text=">"
+		        android:text="     >"
 		        android:id="@+id/addorder_SellerName"/> 
 		</RelativeLayout>
+		
+	     <View android:layout_height="15dp"
+	        android:layout_width="match_parent"
+	        android:background="@color/darkgray"/> 
+	      <TextView android:id="@+id/addorder_go_adddetails"
+	          android:layout_width="match_parent"
+	          android:layout_height="match_parent"
+	          android:text="添加明细"
+	          android:paddingTop="6dp"
+	          android:paddingBottom="6dp"
+	          android:textSize="20dp"
+	          android:gravity="center"
+	          android:textColor="@color/black"
+	          />
+	     <!--  <LinearLayout android:layout_width="match_parent"
+	          android:layout_height="wrap_content"
+	          android:orientation="vertical">
+	      <View android:layout_height="1dp"
+	        android:layout_width="match_parent"
+	        android:background="@color/darkgray"/>
+	      <TextView  android:paddingLeft="20dp"
+	           android:layout_width="wrap_content"
+		        android:layout_height="match_parent"
+		        android:textSize="20dp"
+		        android:text="XXXXXXXXX"
+	           android:textColor="@color/black"/>
+	       <TextView  android:paddingLeft="20dp"
+	           android:layout_width="wrap_content"
+		        android:layout_height="match_parent"
+		        android:textSize="12dp"
+		        android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+	           	/>
+	      </LinearLayout>  -->
 	</LinearLayout>
 	</ScrollView>     
 
-</LinearLayout>
+</RelativeLayout>
