--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent">   
 	 <FrameLayout android:id="@android:id/tabcontent"
 	     android:layout_width="match_parent"
+	     android:layout_above="@android:id/tabs"
 	     android:layout_height="match_parent">       
 	      
 	 </FrameLayout>
