订单列表展示界面客户端

--- a/res/layout/order_list.xml
+++ b/res/layout/order_list.xml
@@ -2,30 +2,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" 
+    android:orientation="horizontal" 
     android:paddingTop="10dp"
-    android:paddingBottom="10dp">   
-  <TextView android:id="@+id/orderCode"
-      android:layout_width="match_parent"
-      android:paddingLeft="20dp"
-      android:textColor="@android:color/black"
-      android:layout_height="wrap_content"
-      android:text="单号：SXD201702067"
-      android:textSize="20dp"/>
-  <LinearLayout android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-       android:paddingLeft="20dp">
-      <TextView android:layout_height="match_parent"
-          android:layout_width="wrap_content"
-          android:text="客户：杭州欧元印染有限公司"
-          android:id="@+id/customer"
-          android:textSize="10dp"/>
-      <TextView android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:text="2017-2-20"
-          android:paddingLeft="30dp"
-          android:textSize="10dp"
-          android:id="@+id/Writetime"/>
-  </LinearLayout>
+    android:paddingBottom="10dp">  
+    <LinearLayout android:layout_width="wrap_content"
+	    android:layout_height="match_parent"
+	    android:layout_weight="2"
+    	android:orientation="vertical" >
+	  <TextView android:id="@+id/order_list_Code"
+	      android:layout_width="match_parent"
+	      android:paddingLeft="20dp"
+	      android:textColor="@android:color/black"
+	      android:layout_height="wrap_content"
+	      android:text="单号：SXD201702067"
+	      android:textSize="20dp"/>
+	  <LinearLayout android:layout_width="match_parent"
+	      android:layout_height="wrap_content"
+	      android:orientation="horizontal"
+	       android:paddingLeft="20dp">
+	      <TextView android:layout_width="wrap_content"
+	          android:layout_height="match_parent"
+	          android:visibility="gone"
+	          android:id="@+id/order_list_id"/>
+	      <TextView android:layout_height="match_parent"
+	          android:layout_width="wrap_content"
+	          android:text="杭州欧元印染有限公司"
+	          android:id="@+id/order_list_Name"
+	          android:textSize="10dp"/>
+	      <TextView android:layout_width="wrap_content"
+	          android:layout_height="match_parent"
+	          android:text="2017-2-20"
+	          android:paddingLeft="30dp"
+	          android:textSize="10dp"
+	          android:id="@+id/order_list_Writetime"/>
+	  </LinearLayout>
+  </LinearLayout> 
+	  <LinearLayout android:layout_width="wrap_content"
+	    android:layout_height="match_parent"
+	    android:layout_weight="1"
+	   android:paddingRight="5dp"
+	    android:orientation="vertical" >
+	      <TextView android:layout_width="match_parent"
+	          android:layout_height="match_parent"
+	          android:text="已审核"
+	          android:gravity="center_vertical|right"
+	          android:id="@+id/order_list_state"/>
+	  </LinearLayout>
 </LinearLayout>
