--- a/res/layout/activity_showorder.xml
+++ b/res/layout/activity_showorder.xml
@@ -6,23 +6,21 @@
     <LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	 	android:background="@drawable/bottom_border" 
-	    android:id="@+id/order_type_spinner_parent"
 	    android:layout_alignParentTop="true"
-	    android:paddingLeft="10dp">
-	   <Spinner 
-	       android:layout_width="wrap_content"
+	    android:padding="20dp">
+	    <TextView android:layout_width="wrap_content"
 	       android:layout_height="match_parent"
-	       android:id="@+id/order_type_spinner"
-	       android:background="@null"
-	       android:padding="0dp"/>
+	       android:layout_weight="1"/>
 	   <TextView 
-	       android:id="@+id/text"
 	       android:layout_width="wrap_content"
 	       android:layout_height="match_parent"
-	       android:layout_marginLeft="-3dp"
-	       android:text="▼"
-	       android:gravity="center_vertical" />
-			<FrameLayout    
+	       android:id="@+id/show_order_type"
+	       android:textColor="@color/black"
+	       android:layout_weight="1"
+	       android:text="销售订单   ▼"
+	       android:textSize="20dp"
+	       android:gravity="center"/>   
+<!-- 			<FrameLayout    
 	            android:layout_weight="1"  
 	            android:layout_width="0dp"  
 	            android:layout_height="wrap_content">  
@@ -49,7 +47,13 @@
 	                android:layout_gravity="right|center_vertical"  
 	                android:layout_width="wrap_content"  
 	                android:layout_height="wrap_content"/>  
-	        </FrameLayout>  
+	        </FrameLayout> -->  
+	      <ImageView android:layout_width="wrap_content"
+	          android:layout_height="match_parent"
+	          android:layout_weight="1"
+	           android:gravity="right"
+	          android:id="@+id/showorder_reload_img"
+	          android:src="@drawable/ic_action_reload"/>
 	</LinearLayout>
 	
 	<LinearLayout
